RESOLVED FIXED216875
Root node with stateless wheel event is not always canHandleWheelEvent
https://bugs.webkit.org/show_bug.cgi?id=216875
Summary Root node with stateless wheel event is not always canHandleWheelEvent
cathiechen
Reported 2020-09-23 06:12:23 PDT
This bug is split from bug 216609
Attachments
Patch (1.90 KB, patch)
2020-09-23 06:17 PDT, cathiechen
no flags
Patch (1.82 KB, patch)
2020-09-24 01:27 PDT, cathiechen
no flags
cathiechen
Comment 1 2020-09-23 06:17:39 PDT
Simon Fraser (smfr)
Comment 2 2020-09-23 13:13:17 PDT
Comment on attachment 409468 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409468&action=review > Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:148 > + if (isLatchedNode() || (isRootNode() && !(wheelEvent.phase() == PlatformWheelEventPhaseNone && wheelEvent.momentumPhase() == PlatformWheelEventPhaseNone))) This should use isNonGestureEvent()
cathiechen
Comment 3 2020-09-24 01:26:36 PDT
Comment on attachment 409468 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=409468&action=review >> Source/WebCore/page/scrolling/ScrollingTreeScrollingNode.cpp:148 >> + if (isLatchedNode() || (isRootNode() && !(wheelEvent.phase() == PlatformWheelEventPhaseNone && wheelEvent.momentumPhase() == PlatformWheelEventPhaseNone))) > > This should use isNonGestureEvent() Done, thanks!
cathiechen
Comment 4 2020-09-24 01:27:43 PDT
EWS
Comment 5 2020-09-24 05:52:40 PDT
Committed r267527: <https://trac.webkit.org/changeset/267527> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409540 [details].
Radar WebKit Bug Importer
Comment 6 2020-09-24 05:53:18 PDT
Note You need to log in before you can comment on or make changes to this bug.