Root node with stateless wheel event isn't always scrollable https://bugs.webkit.org/show_bug.cgi?id=216875

Reviewed by Simon Fraser.

Root nodes are not always capable of handling wheel event. When it is a stateless wheel event which
does not trigger rubber-band, we should check the scroll content of the root node.

* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::canHandleWheelEvent const): Stateless wheel event
doesn't trigger rubber-band, should check the scroll content.


Canonical link: https://commits.webkit.org/229709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267527 268f45cc-cd09-0410-ab3c-d52691b4dbfc